--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,10 +69,10 @@
 
         <div class = "footer_div">  
            <p class="copyright text-muted">
-            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://iewoaix8736.github.io/">Iewoaix</a>
+            Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://blubiu.github.io/">blubiu</a>
             </p>
         	<div align="right">
-    			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    			<link rel="stylesheet" href="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
 
           <!-- 访问统计 -->
           <span id="busuanzi_container_site_pv">
