--- a/_includes/side-panel.html
+++ b/_includes/side-panel.html
@@ -26,7 +26,7 @@
         <!-- 头像效果-end -->
         <h1 class="panel-cover__title panel-title"><a href="/#blog" title="link to homepage for {{ site.title }}" class="blog-button">{{ site.title }}</a></h1>
         {% if site.subtitle %}
-        <span class="panel-cover__subtitle panel-subtitle">blubiu</span>
+        <span class="panel-cover__subtitle panel-subtitle">{{ site.title }}</span>
         {% endif %}
         <hr class="panel-cover__divider" />
         <p class="panel-cover__description">{{ site.description }}</p>
@@ -43,7 +43,7 @@
               <ul class="navigation">
                 <li class="navigation__item"><a href="/#blog" title="{{site.blog_button.description}}" class="blog-button">{{site.blog_button.title}}</a></li>
                 {% for item in site.nav %}
-                  <li class="navigation__item"><a href="{{item.url}}" title="{{item.description}}">blubiu</a></li>
+                  <li class="navigation__item"><a href="{{item.url}}" title="{{item.description}}">{{item.title}}</a></li>
                 {% endfor %}
               </ul>
             </nav>
