--- a/_includes/side-panel.html
+++ b/_includes/side-panel.html
@@ -26,7 +26,7 @@
         <!-- 头像效果-end -->
         <h1 class="panel-cover__title panel-title"><a href="/#blog" title="link to homepage for {{ site.title }}" class="blog-button">{{ site.title }}</a></h1>
         {% if site.subtitle %}
-        <span class="panel-cover__subtitle panel-subtitle">{{ site.title }}</span>
+        <span class="panel-cover__subtitle panel-subtitle">{{ site.subtitle }}</span>
         {% endif %}
         <hr class="panel-cover__divider" />
         <p class="panel-cover__description">{{ site.description }}</p>
