--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,7 +72,7 @@
             Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Theme by <a href="http://blubiu.github.io/">blubiu</a>
             </p>
         	<div align="right">
-    			<link rel="stylesheet" href="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
+    			<link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
           <!-- 访问统计 -->
           <span id="busuanzi_container_site_pv">
