--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,7 @@ h3 {
   box-shadow: 0px 5px 5px #9FB6CD;
   border-left: 6px solid #1874CD; 
   position:relative;
+  width: 50%;
 }
 
 h4 {
@@ -470,7 +471,7 @@ img::-moz-selection {
 
   .post img {
     max-width: 100%;
-    margin: 0 auto;
+    margin-top: 40px;
     border-radius: 3px;
     text-align: center;
     display: block; }
